# ChangeLog for app-misc/ca-certificates
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/ca-certificates/ChangeLog,v 1.10 2007/06/23 02:38:57 dsd Exp $

  23 Jun 2007; Daniel Drake <dsd@gentoo.org>
  ca-certificates-20050804.ebuild, ca-certificates-20061027.2.ebuild,
  ca-certificates-20070303-r1.ebuild:
  Change LICENSE to MPL-1.1, bug #176002

*ca-certificates-20070303-r1 (06 May 2007)

  06 May 2007; Mike Frysinger <vapier@gentoo.org>
  +ca-certificates-20070303-r1.ebuild:
  Fix ca-certificates.conf generation #177298 by Remy Blank.

*ca-certificates-20070303 (05 May 2007)

  05 May 2007; Mike Frysinger <vapier@gentoo.org>
  +ca-certificates-20070303.ebuild:
  Version bump #175999 by Daniel Drake.

*ca-certificates-20061027.2 (20 Feb 2007)

  20 Feb 2007; Mike Frysinger <vapier@gentoo.org>
  +ca-certificates-20061027.2.ebuild:
  Version bump #167608 by Peter Gantner.

  03 Feb 2007; Mike Frysinger <vapier@gentoo.org>
  ca-certificates-20050804.ebuild:
  Fixup doc installation #164995 by Krzysiek Pawlik.

  17 Oct 2006; Roy Marples <uberlord@gentoo.org>
  ca-certificates-20050804.ebuild:
  Added ~sparc-fbsd keyword.

  27 Apr 2006; Alec Warner <antarus@gentoo.org>
  files/digest-ca-certificates-20050518,
  files/digest-ca-certificates-20050804, Manifest:
  Fixing duff SHA256 digests: Bug # 131293

  30 Mar 2006; Diego Pettenò <flameeyes@gentoo.org>
  ca-certificates-20050804.ebuild:
  Add ~x86-fbsd keyword.

*ca-certificates-20050804 (04 Sep 2005)

  04 Sep 2005; Daniel Black <dragonheart@gentoo.org>
  +ca-certificates-20050804.ebuild:
  version bump

*ca-certificates-20050518 (23 May 2005)

  23 May 2005; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by me for #93520.