@@ -1,8 +1,9 @@
 DIST ca-certificates_20050804_all.deb 93188 RMD160 02a84a64631c68a535d2e7b51312f2987e2e9bfb SHA1 d7974e61d38ecf60d7e61db8f03b0468c4eb3a93 SHA256 f2ab261c18c1093c98e39998a17616aae3774895948be0961dfd882f7cb12704
 DIST ca-certificates_20061027.2_all.deb 94204 RMD160 bdc57f465e6e57ff0f01bd89953f2c08aea65f47 SHA1 c1e55b417cafa62035b165157508d47cc048609d SHA256 09d3e3f4d38fc599b1e10bb1bc44b233a3874dcd791058e4bbc415faad662c15
 DIST ca-certificates_20070303_all.deb 97182 RMD160 f569d903a6e55e8699f5fbf43358831f85925031 SHA1 a299c7ccfa1129ffb622146b1a2732d8cae1eeb0 SHA256 ecef927c097fe08677c87799510f33efbf955f00120d74e347227731a1405f91
-EBUILD ca-certificates-20050804.ebuild 1298 RMD160 e26a6a05b4fe5a4a58913a5ddd2f124af0311dba SHA1 72e64050ab685cacbc782337af9f4fd1fdcfd4f4 SHA256 539db6a895ce15c5948c52d4637bb6a6417a8fd76e534c23d54d4545fa7bb63b
-EBUILD ca-certificates-20061027.2.ebuild 1309 RMD160 4d27b0b93c476bb1411e6442cfc5df176e474623 SHA1 3cc23cd9de600711aa43811ce30d9f165c24a2ee SHA256 1c5573de86e74434ec13243b6066e9af53d40cb70ed9cc0b93b4af7b1ce389da
-EBUILD ca-certificates-20070303-r1.ebuild 1480 RMD160 37254f46b8931be20ff9d9bbb13a26cab7466d7e SHA1 6df3abf34b1964dab009b5300e62ea234fcfcac8 SHA256 70f7bb91c4a0a654f83a431397128b4ddb1ff2c18b42eb894bf6d2473f567f75
-MISC ChangeLog 1794 RMD160 2183199d015cd1b9e860273da6c0d308378a743d SHA1 0b8e6ea54aa457861ae123d51b0f77adddbf7756 SHA256 742bdc927b94159fc598f90c262ce0cdc68223d653acd29582938b4e46103850
+EBUILD ca-certificates-20050804.ebuild 1316 RMD160 cbf8bce153208f876f5cd519cf5c48c36c6b3f6d SHA1 5e1e1a71f2c8608c812edfacac4b86c2f5b87fc8 SHA256 b3763d612e6f34691ac43ef35a828b4de1bb20ed89c4249f2fcdf56f8f852b94
+EBUILD ca-certificates-20061027.2.ebuild 1327 RMD160 a330ada65d0aba6b10992707ae37904c2f2e0ec7 SHA1 cc7df6c5c3d3e476c6e7c81960c1063976a8546e SHA256 4f3e088625714368f18587747414b8a9ad207b17679e9b46a640b66f15b3be81
+EBUILD ca-certificates-20070303-r1.ebuild 1501 RMD160 a72c0af82ec7cbaed16bd44b9d3189a911edbc56 SHA1 de10fa7316b54681cbe4d533181b9864f5ea42bf SHA256 0dd65296b2beb69b1129de4072b1ff4305088208f19e7f85e834434ce4cff406
+MISC ChangeLog 2057 RMD160 b0934cadedb2800a41c37e9a02aa7176b3791962 SHA1 380ac3bddf4097292f508a70ad47176f5f95bab6 SHA256 782ad94ae22dddbce84b56050a66607623693d20d26a361805caee693afa9da0
+MISC ca-certificates-20070303-r1.ebuild.rej 555 RMD160 08220f777c651cb72266ee905322e5f01358be87 SHA1 1a3ebd7bf658166d1e8b7dbdd6e729ba6aa2a0a9 SHA256 d60f1850356438651c87b74724dbf90306701fc78be0ec4ccdd07945b9ed95f2
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
