@@ -1,6 +1,14 @@
 # ChangeLog for app-misc/ca-certificates
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/ca-certificates/ChangeLog,v 1.10 2007/06/23 02:38:57 dsd Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-misc/ca-certificates/ChangeLog,v 1.12 2008/01/31 16:37:30 cardoe Exp $
+
+  31 Jan 2008; Doug Klima <cardoe@gentoo.org>
+  ca-certificates-20070303-r1.ebuild:
+  need coreutils-6.10-r1
+
+  31 Jan 2008; Mike Frysinger <vapier@gentoo.org>
+  ca-certificates-20070303-r1.ebuild:
+  Depend on mktemp or coreutils #208258 by Chris Gianelloni.
 
   23 Jun 2007; Daniel Drake <dsd@gentoo.org>
   ca-certificates-20050804.ebuild, ca-certificates-20061027.2.ebuild,
